<resources>
    <string name="app_name">Liste Wanted</string>
    <string name="title_events">Évents</string>
    <string name="title_home">Présentation</string>
    <string name="title_defis">Défis</string>
    <string name="proposer_un_defi">Proposer un défi</string>
    <string name="defi_title">Défi n°%1$d de %2$s</string>
    <string name="connection_error">Erreur de connexion à internet 😢</string>
    <string name="server_error">Erreur côté serveur, veuillez réésayer plus tard 😬</string>
    <string name="finished_defi">Défi réalisé</string>
    <string name="listeux_picture">Photo de listeux(se)</string>
    <string name="coming_events">Évents à venir</string>
    <string name="past_events">Évents passés</string>
    <string name="who">Qui es-tu ?</string>
    <string name="what_defi">Quel est ton défi ?</string>
    <string name="send_defi">Envoyez le défi</string>
    <string name="defi_sent">Défi envoyé !</string>
    <string name="date_interval">Du %1$s %2$s %3$s au %4$s %5$s %6$s</string>
    <string name="date">Le %1$s %2$s %3$s</string>
    <string name="time_interval">De %1$sh%2$s à %3$sh%4$s</string>
    <string name="time">À %1$sh%2$s</string>
    <string name="description">Description</string>
    <string name="place">Lieu</string>
    <string name="share">"Partager cet évent !!!"</string>
    <string name="share_event_text">"La liste Wanted organise "%1$s", on y va ensemble ?"</string>
    <string name="about">Liste BDE Wanted - 2022</string>
    <string name="event_channel_name">Évent</string>
    <string name="event_channel_description">Notifications de début d\'évent</string>
    <string name="title_partnership">Partenariats</string>
    <string name="finished_defis">Défis réalisés : %1$d</string>
    <string name="facebook">Facebook</string>
    <string name="youtube">Youtube</string>
    <string name="website">Site web</string>
    <string name="instagram">Instagram</string>
    <string name="inavailable_evidence">La preuve de ce défi n\'est pas encore disponible</string>
    <string name="telegram">Telegram</string>
    <string name="etoile">★</string>
</resources>