<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.defis.SendDefiActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_margin="32dp">

    <EditText
        android:id="@+id/input_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/who"
        android:minHeight="48dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/input_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/what_defi"
        android:minLines="3"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_defi" />


</LinearLayout>