<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/facebook"
                android:layout_width="64sp"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:padding="12dp"
                app:tint="@color/white"
                android:contentDescription="@string/facebook"
                android:src="@drawable/ic_facebook" />
            <ImageView
                android:id="@+id/instagram"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:padding="12dp"
                app:tint="@color/white"
                android:contentDescription="@string/instagram"
                android:src="@drawable/ic_instagram"/>
            <ImageView
                android:id="@+id/telegram"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:padding="12dp"
                app:tint="@color/white"
                android:contentDescription="@string/telegram"
                android:src="@drawable/ic_telegram"/>
            <ImageView
                android:id="@+id/youtube"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:padding="12dp"
                app:tint="@color/white"
                android:contentDescription="@string/youtube"
                android:src="@drawable/ic_youtube"/>
            <ImageView
                android:id="@+id/website"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:padding="12dp"
                app:tint="@color/white"
                android:contentDescription="@string/website"
                android:src="@drawable/ic_website"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/list_poles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_margin="16dp"
            android:text="@string/about" />
    </LinearLayout>
</ScrollView>